--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
   </button>
   <table class="property-table">
     <tr ng-repeat="node in activeNode.nodes | orderBy:'name'" ng-if="!node.dir" ng-class-odd="'odd-row'">
-      <td>
+      <td style="width: 60px">
         <button type="button" class="btn btn-default btn-xs" ng-click="copyNode(node)" title="Copy Node">
           <span class="glyphicon glyphicon-floppy-open"></span>
         </button>
@@ -32,11 +32,11 @@
           <span class="glyphicon glyphicon-trash"></span>
         </button>
       </td>
-      <td style="text-align:left;font-weight:bold;padding: 5px 4px;">
+      <td style="text-align:left;font-weight:bold;padding: 5px 4px; width: 10%;">
         <span>{{node.name}}:</span>
       </td>
-      <td style="padding-right: 5px;">
-        <span class="value" editable-text="node.value" onbeforesave="updateNode(node,$data)">{{node.value || '(empty)'}}</span>
+      <td style="padding-right: 5px 4px 0 0" class="value-cell">
+        <span class="value"  style="width: 100%" editable-textarea="node.value" onbeforesave="updateNode(node,$data)">{{node.value || '(empty)'}}</span>
       </td>
     </tr>
   </table>
